# TJSOES-GisAgent

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml
examples/: create_sample_data.py  render_shanghai_rainfall_refined.py
examples/data/: sample_points.geojson  sample_polygons.geojson
src/gis_agent/: cli.py  engine.py  executor.py  llm.py  planner.py  prompts.py  runtime.py  semantics.py  template_builder.py  tool_registry.py  webapp.py  workflow.py
src/gis_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
